LH: Se crea el directorio notebooks,  renombra los archivos y se agrega la propuesta de entrenamiento basado en el calculo de demanda

--- a/notebooks/data_preparation.ipynb
+++ b/notebooks/data_preparation.ipynb
@@ -7,7 +7,7 @@
     "---\n",
     "### Proyecto Retail \n",
     "### Fase 1. Limpieza de datos\n",
-    "### Por: Equipo 5 (Luis Hermenegildo)\n",
+    "### Por: Equipo 5 (Luis Hermenegildo, Edgar Correa, Miguel Avila)\n",
     "---"
    ]
   },
@@ -184,7 +184,7 @@
    ],
    "source": [
     "# Cargar los datos\n",
-    "df = pd.read_csv('../../data/OnlineRetail.csv', encoding='ISO-8859-1')\n",
+    "df = pd.read_csv('../data/OnlineRetail.csv', encoding='ISO-8859-1')\n",
     "# Mostrar las primeras filas\n",
     "df.head(5)\n"
    ]
